--- a/wiki-app/app/articles/components/editor/editor.component.html
+++ b/wiki-app/app/articles/components/editor/editor.component.html
@@ -1,51 +1,12 @@
-<md-toolbar>
-  <button md-raised-button (click)="openCreateArticleDialog.emit()">
-    <md-icon>add</md-icon>
-  </button>
-  <md-button-toggle-group #boardModes="mdButtonToggleGroup" (change)="toggleMode(boardModes.value)">
-    <md-button-toggle value="write" [checked]="mode == 'write'">
-      <md-icon>
-        text_format
-      </md-icon>
-    </md-button-toggle>
-    <md-button-toggle value="place" [checked]="mode == 'place'">
-      <md-icon>
-        create
-      </md-icon>
-    </md-button-toggle>
-  </md-button-toggle-group>
-  <button md-raised-button value="write" (click)="undo.emit()">
-    <md-icon aria-label="Отмена">undo</md-icon>
-  </button>
-  <button md-raised-button value="place" (click)="redo.emit()">
-    <md-icon>redo</md-icon>
-  </button>
-  <md-toolbar-row *ngIf="boardModes.value == 'place'">
-    <md-button-toggle-group #draughtSelected="mdButtonToggleGroup" (change)="selectDraught(draughtSelected.value)">
-      <md-button-toggle value="," [checked]="!draught.queen && !draught.black && !deleteMode">
-        <draught-edit [queen]="false" [black]="false" [selected]="!draught.queen && !draught.black && !deleteMode"></draught-edit>
-      </md-button-toggle>
-      <md-button-toggle value="queen," [checked]="draught.queen && !draught.black && !deleteMode">
-        <draught-edit [queen]="true" [black]="false" [selected]="draught.queen && !draught.black && !deleteMode"></draught-edit>
-      </md-button-toggle>
-      <md-button-toggle value=",black" [checked]="!draught.queen && draught.black && !deleteMode">
-        <draught-edit [queen]="false" [black]="true" [selected]="!draught.queen && draught.black && !deleteMode"></draught-edit>
-      </md-button-toggle>
-      <md-button-toggle value="queen,black" [checked]="draught.queen && draught.black && !deleteMode">
-        <draught-edit [queen]="true" [black]="true" [selected]="draught.queen && draught.black && !deleteMode"></draught-edit>
-      </md-button-toggle>
-      <md-button-toggle value="remove" [checked]="deleteMode">
-        <div class="remove-draught-container">
-          <div class="remove-draught" [ngClass]="{'selected-remove': deleteMode}"></div>
-        </div>
-      </md-button-toggle>
-    </md-button-toggle-group>
-  </md-toolbar-row>
-</md-toolbar>
+<ac-board-toolbar
+  (openCreateArticleDialog)="openCreateArticleDialog.emit($event)"
+  (editToggled)="editToggled.emit($event)"
+  (undo)="undo.emit($event)"
+  (redo)="redo.emit($event)"
+></ac-board-toolbar>
 <md-grid-list [rowHeight]="rowHeight" #editorGrid *ngIf="article; else createArticle" cols="12">
   <md-grid-tile colspan="5">
     <ac-board #boardRef
-              (squareClicked)="onSquareClicked($event)"
               class="fit"
               [board]="boardBox.board"
               [style.backgroundColor]="backgroundColor"
