--- a/wiki-app/app/articles/components/board-toolbar/board-toolbar.component.css
+++ b/wiki-app/app/articles/components/board-toolbar/board-toolbar.component.css
@@ -24,11 +24,18 @@
   margin-left: 8px;
 }
 
+.remove-draught-container {
+  height: 46px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .remove-draught {
-  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: red;
-  /*right: 10px;*/
-  /*top: 10px;*/
   width: 38px;
   height: 38px;
   opacity: 0.3;
@@ -42,12 +49,10 @@
   opacity: 1;
 }
 .remove-draught:before, .remove-draught:after {
-  position: absolute;
-  top: 1px;
-  left: 17px;
+  display: inline-block;
   content: ' ';
   height: 33px;
-  width: 2px;
+  width: 1px;
   background-color: white;
 }
 .remove-draught:before {
