--- a/wiki-app/app/articles/components/board-toolbar/board-toolbar.component.html
+++ b/wiki-app/app/articles/components/board-toolbar/board-toolbar.component.html
@@ -1,5 +1,5 @@
 <md-toolbar>
-  <button md-raised-button (click)="openCreateArticleDialog.emit()">
+  <button md-raised-button (click)="handleOpenCreateArticle()">
     <md-icon>add</md-icon>
   </button>
   <md-button-toggle-group #boardModes="mdButtonToggleGroup" (change)="toggleMode(boardModes.value)">
