--- a/wiki-app/app/articles/components/board-toolbar/board-toolbar.component.html
+++ b/wiki-app/app/articles/components/board-toolbar/board-toolbar.component.html
@@ -2,7 +2,10 @@
   <button md-raised-button (click)="handleOpenCreateArticle()">
     <md-icon>add</md-icon>
   </button>
-  <md-button-toggle-group #boardModes="mdButtonToggleGroup" (change)="toggleMode(boardModes.value)">
+  <button md-raised-button (click)="handleOpenCreateArticle()">
+    <md-icon>folder_open</md-icon>
+  </button>
+  <md-button-toggle-group #boardModes="mdButtonToggleGroup" (change)="toggleMode(boardModes.value)" *ngIf="createMode">
     <md-button-toggle value="write" [checked]="mode == 'write'">
       <md-icon>
         text_format
@@ -14,14 +17,14 @@
       </md-icon>
     </md-button-toggle>
   </md-button-toggle-group>
-  <button md-raised-button value="write" (click)="handleUndo()">
+  <button md-raised-button value="write" (click)="handleUndo()" *ngIf="createMode">
     <md-icon aria-label="Отмена">undo</md-icon>
   </button>
-  <button md-raised-button value="place" (click)="handleRedo()">
+  <button md-raised-button value="place" (click)="handleRedo()" *ngIf="createMode">
     <md-icon>redo</md-icon>
   </button>
   <md-toolbar-row *ngIf="boardModes.value == 'place'">
-    <md-button-toggle-group #draughtSelected="mdButtonToggleGroup" (change)="selectDraught(draughtSelected.value)">
+    <md-button-toggle-group #draughtSelected="mdButtonToggleGroup" (change)="handleSelectDraught(draughtSelected.value)">
       <md-button-toggle value="," [checked]="!draught.queen && !draught.black && !deleteMode">
         <draught-edit [queen]="false" [black]="false" [selected]="!draught.queen && !draught.black && !deleteMode"></draught-edit>
       </md-button-toggle>
