--- a/wiki-app/app/articles/components/board-toolbar/dialogs/create-article-dialog/create-article-dialog.component.html
+++ b/wiki-app/app/articles/components/board-toolbar/dialogs/create-article-dialog/create-article-dialog.component.html
@@ -14,10 +14,10 @@
     </md-list-item>
     <md-list-item>
       <md-select class="full-width" [(ngModel)]="data.boardRequest.rules" title="Правила" placeholder="Правила">
-        <md-option [value]="rules.RUSSIAN">Русские шашки</md-option>
-        <md-option [value]="rules.RUSSIAN_GIVEAWAY">Русские шашки (поддавки)</md-option>
-        <md-option [value]="rules.INTERNATIONAL">Интернациональные шашки</md-option>
-        <md-option [value]="rules.INTERNATIONAL_GIVEAWAY">Интернациональные шашки (поддавки)</md-option>
+        <md-option [value]="'RUSSIAN'">Русские шашки</md-option>
+        <md-option [value]="'RUSSIAN_GIVEAWAY'">Русские шашки (поддавки)</md-option>
+        <md-option [value]="'INTERNATIONAL'">Интернациональные шашки</md-option>
+        <md-option [value]="'INTERNATIONAL_GIVEAWAY'">Интернациональные шашки (поддавки)</md-option>
       </md-select>
     </md-list-item>
     <md-list-item>
