removed example app

--- a/wiki-app/app/articles/components/board-toolbar/dialogs/create-article-dialog/create-article-dialog.component.html
+++ b/wiki-app/app/articles/components/board-toolbar/dialogs/create-article-dialog/create-article-dialog.component.html
@@ -2,9 +2,9 @@
 <div md-dialog-content>
   <md-list>
     <md-list-item>
-      <md-form-field class="full-width">
+      <md-input-container class="full-width">
         <input mdInput tabindex="1" [(ngModel)]="data.article.title" placeholder="Название статьи">
-      </md-form-field>
+      </md-input-container>
     </md-list-item>
     <md-list-item>
       <md-select class="full-width" [(ngModel)]="data.boardRequest.black" title="Цвет" placeholder="Цвет">
