--- a/wiki-app/app/articles/components/article/article.component.html
+++ b/wiki-app/app/articles/components/article/article.component.html
@@ -1,7 +1,7 @@
 <md-card class="fit overflow-scroll">
-  <md-form-field class="full-width" *ngIf="edit">
+  <md-input-container class="full-width" *ngIf="edit">
     <input mdInput title="Название статьи" required [(ngModel)]="currentArticle.title" (blur)="handleChanges()">
-  </md-form-field>
+  </md-input-container>
   <div title="Название статьи" *ngIf="!edit">
     {{currentArticle.title}}
   </div>
