--- a/wiki-app/app/articles/components/board-toolbar/board-toolbar.component.html
+++ b/wiki-app/app/articles/components/board-toolbar/board-toolbar.component.html
@@ -2,7 +2,7 @@
   <button md-raised-button (click)="handleOpenCreateArticle()" *ngIf="edit">
     <md-icon>add</md-icon>
   </button>
-  <button md-raised-button (click)="handleSaveArticle()" *ngIf="edit">
+  <button md-raised-button (click)="handleSaveArticle()" *ngIf="edit" [disabled]="!createMode">
     <md-icon>save</md-icon>
   </button>
   <md-button-toggle-group [disabled]="!createMode" #boardModes="mdButtonToggleGroup" (change)="toggleMode(boardModes.value)" *ngIf="edit">
