--- a/wiki-app/app/articles/components/board/board.component.html
+++ b/wiki-app/app/articles/components/board/board.component.html
@@ -7,7 +7,7 @@
       {{ (boardLength.length - i - boardDim) * -1}}
     </div>
     <square (click)="onSquareClicked(squares[i])" *ngIf="squares[i]" [square]="squares[i]" class="square">
-      <draught class="draught" *ngIf="squares[i]?.draught != null" [playsBlack]="board?.black"
+      <draught class="draught" *ngIf="squares[i]?.draught != null"
                [draught]="squares[i]?.draught"></draught>
     </square>
   </md-grid-tile>
