refactor. put bb

--- a/wiki-app/app/articles/components/board-toolbar/board-toolbar.component.html
+++ b/wiki-app/app/articles/components/board-toolbar/board-toolbar.component.html
@@ -24,7 +24,12 @@
   <button md-raised-button value="place" (click)="handleRedo()" [disabled]="!createMode">
     <md-icon>redo</md-icon>
   </button>
-  <button md-raised-button (click)="handleMakeWhiteStroke()" [disabled]="!createMode" title="Поменять последовательность ходов">
+  <button md-raised-button
+          (click)="handleMakeWhiteStroke()"
+          [disabled]="!createMode"
+          title="Поменять последовательность ходов"
+          *ngIf="edit"
+  >
     <md-icon>swap_horiz</md-icon>
   </button>
   <md-toolbar-row *ngIf="mode == 'place' && edit && !create">
