--- a/wiki-app/app/articles/components/editor/editor.component.html
+++ b/wiki-app/app/articles/components/editor/editor.component.html
@@ -13,9 +13,7 @@
   <md-grid-tile colspan="1">
     <ac-notation
       [blackTurn]="boardBox.board.blackTurn"
-      [currentStroke]="currentStroke"
-      [notationPrevious]="notationPrevious$ | async"
-      [notationNext]="notationNext$ | async"
+      [notation]="notation"
     ></ac-notation>
   </md-grid-tile>
   <md-grid-tile colspan="6">
