--- a/wiki-app/app/articles/components/article-edit/article-edit.component.html
+++ b/wiki-app/app/articles/components/article-edit/article-edit.component.html
@@ -8,7 +8,7 @@
                required
                [(ngModel)]="article.title"
                (blur)="handleArticleChanges()"
-               (keypress)="handleArticleChanges()"
+               (keyup)="handleArticleChanges()"
         >
       </md-input-container>
       <md-input-container class="fit overflow-scroll">
@@ -16,7 +16,7 @@
                 (blur)="handleArticleChanges()"
                 (past)="handleArticleChanges()"
                 (cut)="handleArticleChanges()"
-                (keypress)="handleArticleChanges()"
+                (keyup)="handleArticleChanges()"
                 [(ngModel)]="article.content"></textarea>
       </md-input-container>
     </md-tab>
@@ -27,7 +27,7 @@
                placeholder="Игрок белыми"
                [(ngModel)]="boardBox.whitePlayer"
                (blur)="handleBoardBoxChanges()"
-               (keypress)="handleBoardBoxChanges()"
+               (keyup)="handleBoardBoxChanges()"
         >
       </md-input-container>
       <md-input-container class="full-width">
@@ -36,7 +36,7 @@
                placeholder="Игрок чёрными"
                [(ngModel)]="boardBox.blackPlayer"
                (blur)="handleBoardBoxChanges()"
-               (keypress)="handleBoardBoxChanges()"
+               (keyup)="handleBoardBoxChanges()"
         >
       </md-input-container>
       <md-input-container class="full-width">
@@ -45,7 +45,7 @@
                placeholder="Событие"
                [(ngModel)]="boardBox.event"
                (blur)="handleBoardBoxChanges()"
-               (keypress)="handleBoardBoxChanges()"
+               (keyup)="handleBoardBoxChanges()"
         >
       </md-input-container>
       <md-input-container class="full-width">
@@ -54,7 +54,7 @@
                placeholder="Место"
                [(ngModel)]="boardBox.site"
                (blur)="handleBoardBoxChanges()"
-               (keypress)="handleBoardBoxChanges()"
+               (keyup)="handleBoardBoxChanges()"
         >
       </md-input-container>
       <md-input-container class="full-width">
@@ -63,7 +63,7 @@
                placeholder="Раунд"
                [(ngModel)]="boardBox.round"
                (blur)="handleBoardBoxChanges()"
-               (keypress)="handleBoardBoxChanges()"
+               (keyup)="handleBoardBoxChanges()"
         >
       </md-input-container>
       <md-input-container class="full-width">
@@ -72,7 +72,7 @@
                placeholder="Дата"
                [(ngModel)]="boardBox.date"
                (blur)="handleBoardBoxChanges()"
-               (keypress)="handleBoardBoxChanges()"
+               (keyup)="handleBoardBoxChanges()"
         >
       </md-input-container>
       <md-input-container class="full-width">
@@ -81,7 +81,7 @@
                placeholder="Результат"
                [(ngModel)]="boardBox.result"
                (blur)="handleBoardBoxChanges()"
-               (keypress)="handleBoardBoxChanges()"
+               (keyup)="handleBoardBoxChanges()"
         >
       </md-input-container>
       <md-input-container class="full-width">
@@ -90,10 +90,9 @@
                placeholder="Тип игры"
                [(ngModel)]="boardBox.gameType"
                (blur)="handleBoardBoxChanges()"
-               (keypress)="handleBoardBoxChanges()"
+               (keyup)="handleBoardBoxChanges()"
         >
       </md-input-container>
     </md-tab>
   </md-tab-group>
 </md-card>
-
