--- a/wiki-app/app/articles/components/notation/notation.component.css
+++ b/wiki-app/app/articles/components/notation/notation.component.css
@@ -1,6 +1,20 @@
 .notation {
   vertical-align: top;
+  font-size:18px;
+  overflow-y: scroll;
 }
 .notation-link {
   text-decoration: underline;
+}
+.white-turn {
+  background-color: floralwhite;
+  color: black;
+  padding: 0 4px;
+  border-radius: 4px;
+}
+.black-turn {
+  background-color: black;
+  color: white;
+  padding: 0 4px;
+  border-radius: 4px;
 }
