--- a/wiki-app/app/articles/components/article-view/article-view.component.html
+++ b/wiki-app/app/articles/components/article-view/article-view.component.html
@@ -1,7 +1,7 @@
 <md-card class="fit overflow-scroll">
-  <div title="Название статьи">
+  <h3 title="Название статьи">
     {{article.title}}
-  </div>
+  </h3>
   <div title="Текст статьи" class="fit">
     {{article.content}}
   </div>
