--- a/wiki-app/app/articles/components/board-toolbar/board-toolbar.component.html
+++ b/wiki-app/app/articles/components/board-toolbar/board-toolbar.component.html
@@ -1,10 +1,9 @@
 <md-toolbar>
-  <button md-raised-button (click)="handleOpenCreateArticle()" *ngIf="edit">
+  <button md-raised-button (click)="handleOpenCreateArticle()">
     <md-icon>add</md-icon>
   </button>
   <md-button-toggle-group [disabled]="!createMode"
                           #boardModes="mdButtonToggleGroup"
-                          *ngIf="edit"
                           (change)="toggleMode($event.value)"
   >
     <md-button-toggle value="write" [checked]="mode == 'write'">
@@ -28,11 +27,10 @@
           (click)="handleMakeWhiteStroke()"
           [disabled]="!createMode"
           title="Поменять последовательность ходов"
-          *ngIf="edit"
   >
     <md-icon>swap_horiz</md-icon>
   </button>
-  <md-toolbar-row *ngIf="mode == 'place' && edit && !create">
+  <md-toolbar-row *ngIf="mode == 'place' && !create">
     <bc-place-draught-row></bc-place-draught-row>
   </md-toolbar-row>
 </md-toolbar>
